--- a/homepage.html
+++ b/homepage.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="homescript.js"></script>
+    <link rel="stylesheet" type="text/css" href="style.css" />
     <title>Web Development Test</title>
-</head>
-<body>
-        
-Name:<br>
-<textarea id="myTextarea">
-</textarea>
-
-
-<button type="button" onclick="myFunction()">Start</button>
-</body>
+  </head>
+  <body>
+    <div class="center">
+      <h1>Web Developmet Test</h1>
+      <br />
+      <form>
+        <label for="NickName">Nickname:</label><br />
+        <input id="NickName" name="NickName" placeholder="Nickname" /><br />
+        <button type="button" onclick="myFunction()">Start</button>
+      </form>
+    </div>
+  </body>
 </html>
