--- a/form.html
+++ b/form.html
@@ -1,12 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="formscript.js"></script>
+    <link rel="stylesheet" type="text/css" href="style.css" />
     <title>Test</title>
-</head>
-<body>
-    <p id="demo"></p>
-</body>
+  </head>
+  <body>
+    <div class="center">
+      <h1 id="demo"></h1>
+      <div class="row">
+        <div class="roundContainer">
+          <h3 class="roundContainerText">Html</h3>
+        </div>
+        <div class="roundContainer leftSpace">
+          <h3 class="roundContainerText">Css</h3>
+        </div>
+        <div class="roundContainer leftSpace">
+          <h3 class="roundContainerText">Js</h3>
+        </div>
+        <div class="roundContainer leftSpace">
+          <h3 class="roundContainerText">End</h3>
+        </div>
+      </div>
+      <div class="backBar">
+        <div class="mainBar"></div>
+      </div>
+      <br><br>
+      <form>
+        <p>Question 1:</p>
+        <input type="radio" id="a" name="A" value="a">
+        <label for="a1">Answer 1</label><br>
+        <input type="radio" id="b" name="A" value="b">
+        <label for="a2">Answer 2</label><br>
+        <input type="radio" id="c" name="A" value="c">
+        <label for="a3">Answer 1</label><br><br>
+        <input type="submit" value="Submit">
+      </form>
+    </div>
+  </body>
 </html>
