--- a/form.html
+++ b/form.html
@@ -27,17 +27,19 @@
       <div class="backBar">
         <div class="mainBar"></div>
       </div>
-      <br><br>
-      <form>
-        <p>Question 1:</p>
-        <input type="radio" id="a" name="A" value="a">
-        <label for="a1">Answer 1</label><br>
-        <input type="radio" id="b" name="A" value="b">
-        <label for="a2">Answer 2</label><br>
-        <input type="radio" id="c" name="A" value="c">
-        <label for="a3">Answer 1</label><br><br>
-        <input type="submit" value="Submit">
-      </form>
+      <br /><br />
+      <div id="question" class="">
+        <form>
+          <p>Question 1:</p>
+          <input type="radio" id="a" name="A" value="a" />
+          <label for="a1">Answer 1</label><br />
+          <input type="radio" id="b" name="A" value="b" />
+          <label for="a2">Answer 2</label><br />
+          <input type="radio" id="c" name="A" value="c" />
+          <label for="a3">Answer 1</label><br /><br />
+          <input type="submit" value="Submit" />
+        </form>
+      </div>
     </div>
   </body>
 </html>
