--- a/ranking.html
+++ b/ranking.html
@@ -3,9 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="style.css" />
     <title>Ranking</title>
 </head>
 <body>
-
+    <div class="center">
+        <h1>Ranking</h1>
+        <table>
+            <tr>
+              <th>Nickname</th>
+              <th>Score</th>
+            </tr>
+            <tr>
+              <td>Maria Anders</td>
+              <td>19</td>
+            </tr>
+            <tr>
+              <td>Francisco Chang</td>
+              <td>16</td>
+            </tr>
+            <tr>
+              <td>Ernst Handel</td>
+              <td>13</td>
+            </tr>
+            <tr>
+              <td>Island Trading</td>
+              <td>10</td>
+            </tr>
+            <tr>
+              <td>Yoshi Tannamuri</td>
+              <td>9</td>
+            </tr>
+            <tr>
+              <td>Giovanni Rovelli</td>
+              <td>7</td>
+            </tr>
+          </table>
+    </div>
 </body>
 </html>
