--- a/form.html
+++ b/form.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="formscript.js"></script>
+    <script src="questions.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css" />
+    
     <title>Test</title>
   </head>
   <body>
