Create script to show questions:

--- a/form.html
+++ b/form.html
@@ -6,7 +6,7 @@
     <script src="formscript.js"></script>
     <script src="questions.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css" />
-    
+
     <title>Test</title>
   </head>
   <body>
@@ -33,13 +33,10 @@
       <div id="question" class="">
         <form>
           <p>Question 1:</p>
-          <input type="radio" id="a" name="A" value="a" />
-          <label for="a1">Answer 1</label><br />
-          <input type="radio" id="b" name="A" value="b" />
-          <label for="a2">Answer 2</label><br />
-          <input type="radio" id="c" name="A" value="c" />
-          <label for="a3">Answer 1</label><br /><br />
-          <input type="submit" value="Submit" />
+          <input type="checkbox" name="coffee" value="cream" /><Answer 1><br/><br/>
+          <input type="checkbox" name="coffee" value="sugar" />Answer 2<br/><br/>
+          <input type="checkbox" name="coffee" value="cream" />Answer 3<br/><br/>
+          <input type="checkbox" name="coffee" value="sugar" />Answer 4<br/><br/>
         </form>
       </div>
     </div>
