Show ranking script

--- a/homepage.html
+++ b/homepage.html
@@ -14,7 +14,7 @@
       <form>
         <label for="NickName">Nickname:</label><br />
         <input id="NickName" name="NickName" placeholder="Nickname" /><br />
-        <button type="button" onclick="myFunction()">Start</button>
+        <button type="button" onclick="getName()">Start</button>
       </form>
     </div>
   </body>
