Animation for the progress bar

--- a/form.html
+++ b/form.html
@@ -27,7 +27,7 @@
         </div>
       </div>
       <div class="backBar">
-        <div class="mainBar"></div>
+        <div class="mainBar" id="mainBar"></div>
       </div>
       <br /><br />
       <div id="question" class="">
