Change design + Animation for the progress bar

--- a/form.html
+++ b/form.html
@@ -9,9 +9,9 @@
 
     <title>Test</title>
   </head>
-  <body>
+  <body class="mainTest">
     <div class="center">
-      <h1 id="demo"></h1>
+    <div class="barDiv">
       <div class="row">
         <div class="roundContainer">
           <h3 class="roundContainerText">Html</h3>
@@ -29,15 +29,9 @@
       <div class="backBar">
         <div class="mainBar" id="mainBar"></div>
       </div>
+      </div>
       <br /><br />
       <div id="question" class="">
-        <form>
-          <p>Question 1:</p>
-          <input type="checkbox" name="coffee" value="cream" /><Answer 1><br/><br/>
-          <input type="checkbox" name="coffee" value="sugar" />Answer 2<br/><br/>
-          <input type="checkbox" name="coffee" value="cream" />Answer 3<br/><br/>
-          <input type="checkbox" name="coffee" value="sugar" />Answer 4<br/><br/>
-        </form>
       </div>
     </div>
   </body>
