--- a/homepage.html
+++ b/homepage.html
@@ -7,14 +7,14 @@
     <link rel="stylesheet" type="text/css" href="style.css" />
     <title>Web Development Test</title>
   </head>
-  <body>
+  <body class="homepage">
     <div class="center">
-      <h1>Web Developmet Test</h1>
+      <h1 class="mainTitle">Web Developmet Test</h1>
       <br />
       <form>
-        <label for="NickName">Nickname:</label><br />
-        <input id="NickName" name="NickName" placeholder="Nickname" /><br />
-        <button type="button" onclick="getName()">Start</button>
+        <label for="NickName" class="nickName">Nickname:</label><br />
+        <input id="NickName" name="NickName" class="inputNick" placeholder="Nickname" /><br />
+        <button type="button" class="button" onclick="getName()">Start</button>
       </form>
     </div>
   </body>
