--- a/ranking.html
+++ b/ranking.html
@@ -7,11 +7,11 @@
     <script src="rankingScript.js"></script>
     <title>Ranking</title>
   </head>
-  <body>
+  <body class="ranking">
     <div class="center">
       <div id="ranking">
       </div>
-      <button type="button" onclick="retry()">Retry</button>
+      <button type="button" class="button" onclick="retry()">Retry</button>
     </div>
   </body>
 </html>
