Animation between questions

--- a/form.html
+++ b/form.html
@@ -11,28 +11,27 @@
   </head>
   <body class="mainTest">
     <div class="center">
-    <div class="barDiv">
-      <div class="row">
-        <div class="roundContainer">
-          <h3 class="roundContainerText">Html</h3>
+      <div class="barDiv">
+        <div class="row">
+          <div class="roundContainer">
+            <h3 class="roundContainerText">Html</h3>
+          </div>
+          <div class="roundContainer leftSpace">
+            <h3 class="roundContainerText">Css</h3>
+          </div>
+          <div class="roundContainer leftSpace">
+            <h3 class="roundContainerText">Js</h3>
+          </div>
+          <div class="roundContainer leftSpace">
+            <h3 class="roundContainerText">End</h3>
+          </div>
         </div>
-        <div class="roundContainer leftSpace">
-          <h3 class="roundContainerText">Css</h3>
+        <div class="backBar">
+          <div class="mainBar" id="mainBar"></div>
         </div>
-        <div class="roundContainer leftSpace">
-          <h3 class="roundContainerText">Js</h3>
-        </div>
-        <div class="roundContainer leftSpace">
-          <h3 class="roundContainerText">End</h3>
-        </div>
-      </div>
-      <div class="backBar">
-        <div class="mainBar" id="mainBar"></div>
-      </div>
       </div>
       <br /><br />
-      <div id="question" class="">
-      </div>
+      <div id="question" class=""></div>
     </div>
   </body>
 </html>
